tests/paczka1/small_fuzzy/89051013.err
Error in line 6: HJshf0yH A54 88,4
Error in line 8: HJshf0yH S994 17,3
Error in line 9: A54 S368 83,7
